# nexus

./: .gitignore  AGENT_BACKLOG.md  HANDOFF_PROTOCOL.md  opendeck-config.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
docs/: MULTI_AGENT_UX_IMPROVEMENTS.md
migrations/: 001_initial.sql  002_agent_templates.sql
orchestrator/: README.md  __init__.py  agent_interface.py  cli.py  handoff_validator.py  orchestrator.py  requirements.txt
plugins/: install-plugin.sh
plugins/me.nexus.streamdeck.sdPlugin/: README.md  manifest.json  plugin.js
projects/store-ai-poc/: .state.yaml  CURRENT_STATE.yaml  (+1 more)
scripts/: opendeck-setup.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/api/: mod.rs  routes.rs  server.rs  templates.rs
src-tauri/src/commands/: agent.rs  mcp.rs  mod.rs  project.rs  system.rs  workflow.rs
src-tauri/src/db/: models.rs  pool.rs  queries.rs
src-tauri/src/messaging/: protocol.rs  router.rs
src-tauri/src/process/: manager.rs  mod.rs  registry.rs  spawner.rs  stream.rs
src-tauri/src/project/: mod.rs  workspace.rs
src-tauri/src/state/: app_state.rs
src-tauri/src/workflow/: adaptive.rs  aggregation.rs  checkpoint.rs  conditions.rs  context.rs  enhanced_executor.rs  events.rs  executor.rs  graph.rs  history.rs  messaging.rs  mod.rs  orchestrator.rs  resources.rs  retry.rs  state.rs  templates.rs
templates/: CHANGE_ORDER.md  ORIGINAL_BRIEF.md  architect_handoff.yaml  devops_handoff.yaml  implementer_handoff.yaml  security_handoff.yaml  tester_handoff.yaml
(+87 files in other folders)
